# bazaar-contributions

bge/: bge-animation.c  bge-carousel.c  bge-markdown-render.c  bge-marshalers.list  meson.build
bge/demo/: demo.c  window.blp
bge/wdgt/: bge-wdgt-spec.c  meson.build
bge/wdgt/fmt/: parser.c
bge/wdgt/lookup/: lookup.h  meson.build  path-builder.c  snapshot.c  transform.c
build-aux/flatpak/: io.github.kolunmi.Bazaar.json
data/: io.github.kolunmi.Bazaar.desktop.in  io.github.kolunmi.Bazaar.metainfo.xml.in
po/: POTFILES.in  cs.po  fr.po  ja.po  kw.po  pl.po  pt_BR.po  ru.po  tr.po  zh_CN.po
src/: bz-app-size-dialog.blp  bz-app-size-dialog.c  bz-application.c  bz-carousel.c  bz-curated-view.c  bz-entry-group.c  bz-entry-group.h  bz-flathub-page.c  bz-flatpak-instance.c  bz-gnome-shell-search-provider.c  bz-io.c  bz-io.h  bz-library-page.blp  bz-library-page.c  bz-search-engine.c  bz-search-result.txt  bz-search-widget.blp  bz-search-widget.c  bz-section-view.blp  bz-section-view.c  bz-size-result.txt  bz-template-callbacks.c  bz-world-map.c  gen_gobject.sh  internal-config.yaml  meson.build
